--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,18 @@ body {
   src: url("./assets/fonts/Roboto-Medium.ttf");
   font-weight: 500;
 }
+
+a:hover {
+  transition-duration: 0.3s;
+  opacity: 0.4;
+}
+.active {
+  color: #d0cdcd;
+}
+
+.card:hover {
+  .btn {
+    transition-duration: 10s;
+    display: flex;
+  }
+}
